--- a/arrows8.ipynb
+++ b/arrows8.ipynb
@@ -2,12 +2,64 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "091a6cb0",
+   "metadata": {},
+   "source": [
+    "# Análisis Comparativo de Algoritmos de Machine Learning\n",
+    "## Clasificación de Flechas Direccionales en Imágenes 8×8\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Integrantes del Equipo:**\n",
+    "- **Abraham Ceballos Rodriguez**\n",
+    "- **Seuma Rayo Sauna** \n",
+    "- **Sebastian Botia**\n",
+    "- **Juan Agamez**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Resumen**\n",
+    "\n",
+    "Este notebook presenta un estudio experimental exhaustivo sobre la clasificación de flechas direccionales en imágenes de baja resolución (8×8 píxeles). El objetivo principal es comparar la efectividad de diferentes algoritmos de machine learning en la tarea de clasificación multiclase de patrones visuales simples.\n",
+    "\n",
+    "### **Problema de Investigación**\n",
+    "\n",
+    "Clasificar imágenes de flechas direccionales en cuatro categorías: **up**, **left**, **down**, **right**, utilizando únicamente información de píxeles en escala de grises de imágenes de 8×8.\n",
+    "\n",
+    "### **Metodología Experimental**\n",
+    "\n",
+    "El estudio implementa cinco enfoques algorítmicos distintos:\n",
+    "\n",
+    "1. **Regresión Logística Multivariada** - Modelo lineal con regularización\n",
+    "2. **Árboles de Decisión** - Particionamiento recursivo del espacio de características  \n",
+    "3. **Random Forest** - Ensemble de árboles con bootstrap aggregating\n",
+    "4. **Perceptrón Multicapa (MLP)** - Redes neuronales feed-forward\n",
+    "5. **Redes Neuronales Profundas (DNN)** - Implementación con TensorFlow/Keras\n",
+    "\n",
+    "### **Optimización de Hiperparámetros**\n",
+    "\n",
+    "Cada algoritmo se optimiza mediante **GridSearchCV** con validación cruzada estratificada (k=5), explorando espacios de hiperparámetros específicamente diseñados para cada método.\n",
+    "\n",
+    "### **Métricas de Evaluación**\n",
+    "\n",
+    "- **Accuracy** - Precisión general del modelo\n",
+    "- **F1-Score** - Media armónica entre precisión y recall  \n",
+    "- **Precision** - Proporción de predicciones positivas correctas\n",
+    "- **Recall** - Proporción de casos positivos identificados correctamente\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "16d0fa8e-df67-424a-92d7-875345b7ff6a",
    "metadata": {
     "id": "16d0fa8e-df67-424a-92d7-875345b7ff6a"
    },
    "source": [
-    "Importaciones necesarias"
+    "# Importaciones de Librerías\n",
+    "\n",
+    "Configuración del entorno de trabajo con las librerías necesarias para análisis de datos, visualización y machine learning."
    ]
   },
   {
